--- a/reports/report_base.Rmd
+++ b/reports/report_base.Rmd
@@ -34,8 +34,8 @@ stratachar <- ifelse(grepl("age", basename(params$path)), "Age-Band", "Region")
 ```
 
 # `r paste(studyidchar)`
-## `r paste(stratachar)` Estimates
 
+## Fit Diagnostics
 #### Log Plot
 ```{r, results='asis', fig.width=7.5, fig.height=9.5}
 modout$mcmcout$output %>%
@@ -44,19 +44,34 @@ modout$mcmcout$output %>%
   dplyr::select(c("chain", "iteration", "loglikelihood", "logprior")) %>%
   tidyr::gather(., key = "like", value = "val", 3:4) %>%
   ggplot() +
-  geom_line(aes(x = iteration, y = val, color = like), size = 0.1, alpha = 0.8) +
-  facet_wrap(chain~like, scales = "free_y") +
-  theme_bw()
+  geom_line(aes(x = iteration, y = val, color = chain), size = 0.25, alpha = 0.8) +
+  scale_color_viridis_d() +
+  ylab("") + xlab("Iteration") + 
+  facet_wrap(.~like, scales = "free_y") +
+  theme_bw() + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.position = "bottom",
+        legend.title = element_blank())
 
 ```
 
-#### Quick MCMC Diagnostics
-```{r}
-quickout <- quick_mc_diagnostics(modout)
-```
+#### Metropolis Coupling Acceptance Plot
 ```{r, results='asis', fig.width=7.5, fig.height=9.5}
-quickout
+mcaccplot <- drjacoby::plot_mc_acceptance(modout$mcmcout)
+mcacclogplot1 <- drjacoby::plot_rung_loglike(modout$mcmcout, x_axis_type = 2, y_axis_type = 2)
+mcacclogplot2 <- drjacoby::plot_rung_loglike(modout$mcmcout, x_axis_type = 2, y_axis_type = 3)
+
+cowplot::plot_grid(mcaccplot, mcacclogplot1, mcacclogplot2, nrow = 3)
+
 ```
+
+#### Serological Diagnostics 
+```{r, results='asis', fig.width=7.5, fig.height=9.5}
+quick_sero_diagnostics(modout)
+```
+
+
+## `r paste(stratachar)` Estimates
 
 #### IFRs & Incidence Curve
 
@@ -154,20 +169,17 @@ tibble::tibble("Overall IFR" = sprintf("%1.2f%%", 100*gIFR)) %>%
 #### Seroprevalence Observed vs. Inferred True Prev
 ```{r}
 seropnts <- COVIDCurve::draw_posterior_sero_curves(IFRmodel_inf = modout,
-                                                   dwnsmpl = 1e3,
+                                                   dwnsmpl = 1e2,
                                                    by_chain = F)
 
 serocurvedat <- seropnts %>% 
-  dplyr::select(c("sim", "ObsDay", dplyr::starts_with("RG_"), dplyr::starts_with("inf_"))) %>% 
-  tidyr::gather(., key = "seroprev_strata_lvl", value = "serocount", 3:ncol(.)) %>% 
-  dplyr::mutate(seroprevlvl = ifelse(stringr::str_detect(seroprev_strata_lvl, "RG_"), "RG", "IF"),
+  dplyr::select(c("sim", "ObsDay", dplyr::starts_with("RG_pd_"), dplyr::starts_with("crude_pd_"))) %>% 
+  tidyr::gather(., key = "seroprev_strata_lvl", value = "seroprev", 3:ncol(.)) %>% 
+  dplyr::mutate(seroprevlvl = ifelse(stringr::str_detect(seroprev_strata_lvl, "RG_"), "RG Corr.", "Crude"),
                 param = stringr::str_extract(seroprev_strata_lvl, "ma[0-9]+")) %>% 
-  dplyr::group_by_at(c("sim", "ObsDay", "seroprevlvl", "param")) %>% 
-  dplyr::summarise(serocount = sum(serocount, na.rm = T) ) %>% 
   dplyr::left_join(., dictkey) %>% 
   dplyr::left_join(., demog) %>% 
-  dplyr::mutate(seroprev = serocount/popN,
-                param = factor(param, levels = paste0("ma", 1:nrow(dictkey))),
+  dplyr::mutate(param = factor(param, levels = paste0("ma", 1:nrow(dictkey))),
                 strata = forcats::fct_reorder(strata, as.numeric(param)))
 
 # crude data
@@ -280,8 +292,8 @@ ppc_plot <- ggplot() +
   theme_bw() +
   ggtitle(caption = "Grey Lines are Draws from Posterior, Blue Line is Observed Data (from ECDC)") +
   xlab("Time") + ylab("Deaths")
-  theme(plot.title = element_text(hjust = 0.5, vjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5, vjust = 0.5)) 
+theme(plot.title = element_text(hjust = 0.5, vjust = 0.5),
+      plot.subtitle = element_text(hjust = 0.5, vjust = 0.5)) 
 
 jpgsnapshot(paste0("figures/", studyidchar, "-", stratachar, "_PPCplot.jpg"), 
             plot = ppc_plot)
